chore: add stores in order to test it

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-vue": "^9.21.1",
     "prettier": "^3.2.5",
-    "webpack-dev-server": "^5.0.2"
+    "webpack-dev-server": "^5.0.2",
+    "@pinia/testing": "^0.0.14"
   },
   "dependencies": {
     "esbuild-loader": "^4.0.3",
@@ -28,8 +29,10 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vue": "2.7.x",
+    "vuex": "^3.6.2",
     "vue-loader": "^15.11.1",
     "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "pinia": "^2.1.6"
   }
 }
